Bug 369422 - Number in refresh rate dropdown is being rounded to one decimal digit, producing duplicate-looking entries
Summary: Number in refresh rate dropdown is being rounded to one decimal digit, produc...
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: kcm (other bugs)
Version First Reported In: 5.7.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Kügler
URL: https://fratti.ch/bugdemos/kscreen/re...
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-27 13:52 UTC by Nicolas F.
Modified: 2016-09-27 22:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas F. 2016-09-27 13:52:21 UTC
The refresh rate numbers in their dropdown menu of the advanced settings are being rounded to one decimal digit, which is insufficient precision to distinguish between some refresh rates.

As an example, 59.98 Hz would get rounded to 60.0 Hz, when there already is a 60.0 Hz entry in the list stemming from the screen supporting 60.00 Hz also.

This gets even worse with TVs which support several close refresh rates due to different standards in video frame rates, such as 24.00 Hz and 23.98 Hz (according to xrandr, but more likely to be 23.976 Hz).

Increasing the precision by as much as it needs should fix this issue.

Reproducible: Always

Steps to Reproduce:
1. Either get a display that supports weird fractional refresh rates or use xrandr to check at which solutions your already connected display supports weird fractional refresh rates
2. Check the advanced settings, and notice how there are now duplicate-looking entries in the dropdown
3. After choosing them, note how xrandr's output will confirm that the two are distinct refresh rate, and thus confirms this is merely a visual issue.
Comment 1 Sebastian Kügler 2016-09-27 22:30:32 UTC
Git commit 7c3839083d4d2d77b63d0c2cde4ad87994380e9a by Sebastian Kügler.
Committed on 27/09/2016 at 22:28.
Pushed by sebas into branch 'master'.

Increase precision of refresh rate

It's pretty common to have slightly different refresh rates, and since
this is currently hidden in the advanced section, more precision is OK.
FIXED-IN:5.8.0

M  +1    -1    kcm/src/outputconfig.cpp

http://commits.kde.org/kscreen/7c3839083d4d2d77b63d0c2cde4ad87994380e9a
Comment 2 Sebastian Kügler 2016-09-27 22:31:14 UTC
Git commit 7d8ec60c60477d68e91e9bc68f334ff286cffc73 by Sebastian Kügler.
Committed on 27/09/2016 at 22:31.
Pushed by sebas into branch 'Plasma/5.8'.

Increase precision of refresh rate

It's pretty common to have slightly different refresh rates, and since
this is currently hidden in the advanced section, more precision is OK.
FIXED-IN:5.8.0

M  +1    -1    kcm/src/outputconfig.cpp

http://commits.kde.org/kscreen/7d8ec60c60477d68e91e9bc68f334ff286cffc73