Increase precision of refresh rate

It's pretty common to have slightly different refresh rates, and since
this is currently hidden in the advanced section, more precision is OK.

BUG:369422
FIXED-IN:5.8.0